# upnptvserver

./: .gitignore  CMakeLists.txt  README.md
src/: App.cpp  AppComponent.hpp  device_description.xml  media_helpers.cpp  media_renderer_device.xml
src/DTO/: upnpcontrollerDTO.cpp
src/GObjects/: my_dlna_information.c  my_dlna_information.h  test.cpp  test_program
src/controller/: ServerController.cpp  ServerController.hpp  UpnpController.cpp  UpnpController.hpp
src/file_server/: Utils.cpp  Utils.hpp
test/: Pos info pup_240920_184809.xml  Pupp_240920_184750.xml  fd windows media player webm info.xml  metadata_for_dumb_hp_vid.xml  test_example.cpp
test/curl_reqs/: test_body_play
